# weekender_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: deploy.yaml
app/: admin.py  handlers.py  hanglers.py  keyboards.py  states.py  utils.py
app/database/: models.py  requests.py
migrations/: env.py
migrations/versions/: 2025_05_19_2052-18938657e3dc_added_events_and_interests.py  2025_05_21_1513-2b599dd8a252_add_gender_to_events.py  2025_05_24_1005-a645eeab54c5_add_descriptiond_and_events.py  2025_06_26_1631-438cd264ce5a_add_photo_profile_table.py  2025_06_26_2115-6b898737b754_add_user_profession_and_about.py  2025_07_10_1243-cf93afee5f43_add_table_like_and_friends.py  2025_07_17_1237-2d3c82f8c2e3_adding_a_user_column_to_the_table_total_.py  2025_07_24_1005-44a6dd7619f2_add_tables_supportticket_and_.py  aaf3262f4896_add_table_event.py
src/bot/: main.py
src/bot/db/: connection.py  models.py
src/bot/db/repositories/: admin_repository.py  event_repository.py  options_repository.py  support_repository.py  user_data_utils.py  user_repository.py
src/bot/fsm/: admin_states.py  user_states.py
src/bot/handlers/admin/: __init__.py  callbacks.py  messages.py
src/bot/handlers/user/: __init__.py  callbacks.py  commands.py  messages.py
src/bot/keyboards/: builders.py
src/bot/utils/: admin_helpers.py  age_range_utils.py  decorators.py  helpers.py  texts.py  user_helpers.py
